[gd_scene load_steps=10 format=2]

[ext_resource path="res://BattleScene.gd" type="Script" id=1]
[ext_resource path="res://battlesprites/ameliaback.png" type="Texture" id=2]
[ext_resource path="res://battlesprites/lydiaback.png" type="Texture" id=3]
[ext_resource path="res://battlesprites/necromancerback.png" type="Texture" id=4]
[ext_resource path="res://sprites/Boar.png" type="Texture" id=5]
[ext_resource path="res://sprites/Fish.png" type="Texture" id=6]
[ext_resource path="res://sprites/Necromancer.png" type="Texture" id=7]
[ext_resource path="res://DialogPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://BUTTON_dynamicfont.tres" type="DynamicFont" id=9]

[node name="BattleScene" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.348078 )
__meta__ = {
"_edit_lock_": true
}

[node name="ameliaback" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 340.0
margin_right = 460.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="lydiaback" type="TextureRect" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 440.0
margin_top = 340.0
margin_right = 610.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 0

[node name="necromancerback" type="TextureRect" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 600.0
margin_top = 340.0
margin_right = 770.0
margin_bottom = 510.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0

[node name="Boar" type="TextureRect" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 180.0
margin_right = 1460.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0

[node name="Fish" type="TextureRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 360.0
margin_right = 1275.0
margin_bottom = 643.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0

[node name="Necromancer" type="TextureRect" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 630.0
margin_right = 1112.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0

[node name="DialogPanel" parent="." index="7" instance=ExtResource( 8 )]

margin_top = -210.0
margin_bottom = -20.0

[node name="Face" parent="DialogPanel" index="2"]

visible = false

[node name="AttackButton" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 520.0
margin_right = 320.0
margin_bottom = 570.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "ATTACK"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="HealButton" type="Button" parent="." index="9"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 580.0
margin_right = 320.0
margin_bottom = 630.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "HEAL"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="RestButton" type="Button" parent="." index="10"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 640.0
margin_right = 320.0
margin_bottom = 690.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 9 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "REST"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]


[editable path="DialogPanel"]
